--- a/index.html
+++ b/index.html
@@ -56,6 +56,25 @@
              </li>
         </ul>
     </section>
+    <section class="newslatter">
+        <h3>Newslatter</h3>
+        <p>Assine nossa newlleter para se manter atualizando com nossos serviços e a programação de nossos serviços
+        culturais.</p>
+        <hr/>
 
+        <form>
+            <input type="text" placeholder="email">
+            <button> Cadastrar </button>
+        </form>
+    </section>
+    <footer>
+        <ul>
+            <li><a href=""><i class="fab fa-facebook"></i></a></li>
+            <li><a href=""> <i class="fab fa-twitter-square"></i></a></li>
+            <li><a href=""><i class="fab fa-snapchat"></i></a></li>
+            <li><a href=""><i class="fab fa-pinterest"></i></a></li>]
+        </ul>
+        <p>Todos os direitos reservados</p>
+    </footer>
 </body>
 </html>
